<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="Enter Bank Details"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_45sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <ImageView
        android:id="@+id/cut_iv"
        android:layout_width="25dp"
        android:layout_toRightOf="@id/bank"
        android:layout_height="25dp"
        android:layout_marginStart="@dimen/_43sdp"
        android:layout_gravity="left"
        android:background="@drawable/ic_close"
        android:backgroundTint="@color/black" />

</RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_7sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue1"/>


        <EditText
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/account_number"
            android:layout_width="match_parent"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_holder_name"
            android:padding="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue1"/>


        <EditText
            android:id="@+id/account_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="start" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifsc_code"
            android:padding="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue1"/>


        <EditText
            android:id="@+id/ifsc_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:inputType="text"
            android:gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch_name"
            android:layout_marginTop="@dimen/_6sdp"
            android:padding="@dimen/_7sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/blue1"/>


        <EditText
            android:id="@+id/branch_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="start" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textAllCaps="false"/>


    </LinearLayout>
</LinearLayout>